--- a/terraform/backend.jinja
+++ b/terraform/backend.jinja
@@ -1,14 +1,9 @@
-## © 2024 Amazon Web Services, Inc. or its affiliates. All Rights Reserved.
-## This AWS Content is provided subject to the terms of the AWS Customer Agreement available at
-## http://aws.amazon.com/agreement or other written agreement between Customer and either
-## Amazon Web Services, Inc. or Amazon Web Services EMEA SARL or both.
-
 ## Auto generated backend.tf ##
 ## Updated on: {{ timestamp }} ##
 
 {% if tf_distribution_type == "oss" -%}
 terraform {
-  required_version = ">= 1.6.0, < 2.0.0"
+  required_version = ">= {{ tf_version }}"
   backend "s3" {
     region         = "{{ region }}"
     bucket         = "{{ bucket }}"
@@ -16,16 +11,18 @@ terraform {
     dynamodb_table = "{{ dynamodb_table }}"
     encrypt        = "true"
     kms_key_id     = "{{ kms_key_id }}"
-    role_arn       = "{{ aft_admin_role_arn }}"
+    assume_role = {
+      role_arn = "{{ aft_admin_role_arn }}"
+    }
   }
 }
 {% else -%}
 terraform {
-    backend "remote" {
-        organization = "{{ terraform_org_name }}"
-        workspaces {
-        name = "{{ terraform_workspace_name }}"
-        }
+  backend "remote" {
+    organization = "{{ terraform_org_name }}"
+    workspaces {
+      name = "{{ terraform_workspace_name }}"
     }
+  }
 }
 {% endif %}
